--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <h1>hello</h1>
-    <script src="./dist/bundle.js">
-        
-    </script>
+        <div id="root"></div>
+        <script src="./dist/bundle.js"></script>
     </body>
 </html>
